<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/spacing_xlarge">
    <ImageView
        android:id="@+id/img_persona_duda"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_launcher" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_xlarge"
        android:layout_marginRight="@dimen/spacing_xlarge"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tituloDuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
        android:id="@+id/persona_duda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/persona_duda"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
        <TextView
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
        <TextView
            android:id="@+id/asignatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asignatura"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
    </LinearLayout>
</LinearLayout>