<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FaqActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logo_app_faq"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:contentDescription="@string/contentDescription_logo"
            app:srcCompat="@drawable/helpme_logo_500_250px" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tx_desarrolladores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/desarrolladores"
                android:textColor="@color/primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tx_desarrollador1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/uo257239"
                android:textColor="@color/primary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tx_desarrollador2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/uo277516"
                android:textColor="@color/primary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tx_desarrollador3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/uo276922"
                android:textColor="@color/primary"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/button_github_repo_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/button_github_repo"
            android:scaleType="center"
            android:src="@drawable/icon_github_64" />

        <TextView
            android:id="@+id/tx_version_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_rounded_corners_secondary"
            android:fontFamily="@font/roboto_medium"
            android:padding="15dp"
            android:text="@string/app_version"
            android:textColor="@color/primary"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>