<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublicarDudaActivity">


    <TextView
        android:id="@+id/textViewPublicarDuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloPublicarDuda"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textViewTextExplicativo"
        android:layout_width="344dp"
        android:layout_height="70dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/textoExplicativoPublicarPrueba"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPublicarDuda"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/editTextTituloDudaNueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tituloDudaNueva"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTextExplicativo"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/editTextDuda"
        android:layout_width="368dp"
        android:layout_height="156dp"
        android:ems="10"
        android:hint="@string/descripción"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTextExplicativo"
        app:layout_constraintVertical_bias="0.228" />

    <Spinner
        android:id="@+id/spinnerAsignaturas"
        android:layout_width="366dp"
        android:layout_height="37dp"
        android:entries="@array/asiganturas_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDuda"
        app:layout_constraintVertical_bias="0.241" />

    <ImageButton
        android:id="@+id/imageButtonAdjuntar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAsignaturas"
        app:layout_constraintVertical_bias="0.35"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

    <TextView
        android:id="@+id/textViewAdjuntar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjuntar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/imageButtonAdjuntar"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAsignaturas"
        app:layout_constraintVertical_bias="0.29" />

    <Button
        android:id="@+id/buttonpublicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publicar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonAdjuntar" />

    <TextView
        android:id="@+id/textViewAsignatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloAsignatura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDuda"
        app:layout_constraintVertical_bias="0.103" />


</androidx.constraintlayout.widget.ConstraintLayout>