<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_linea_listado_chats"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_perfil_alumno_receiver_chat"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/img_receiver_chat"
        app:srcCompat="@drawable/button_rounded_corners_primary" />

    <LinearLayout
        android:id="@+id/layout_detalles_linea_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_nombre_hora_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_nombre_chat_receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/placeholder_chat_receiver_name"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_chat_hora_envio_ultimo_mensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/placeholder_hora_envio_ultimo_mensaje_chat"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color_hint"
                android:textSize="11sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_ultimo_mensaje_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/placeholder_ultimo_mensaje_chat"
            android:textColor="@color/text_color_hint"
            android:textSize="11sp" />
    </LinearLayout>
</LinearLayout>