<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_linea_alumno_chat"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar_alumno_chat"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/img_profile_alumno_chat"
        app:srcCompat="@drawable/button_rounded_corners_primary" />

    <LinearLayout
        android:id="@+id/layout_detalle_alumno_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_nombre_alumno_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/placeholder_nombre_alumno_chat"
            android:textColor="@color/primary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_uo_alumno_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/uo_alumno_chat"
            android:textColor="@color/primary"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
